--- a/main/main.tex
+++ b/main/main.tex
@@ -250,9 +250,9 @@ related through fourier transfrom.
 The general mathematical statement of the Heissenberg uncertainty
 principle, for a function $f$ and its Fourier transfrom $\tilde{f}$,
 is \cite{Folland} 
-\todo{Need a value here}
+%\todo{Need a value here}
 \begin{equation}
-\Delta_{\vb*a}f \Delta_{\vb*\alpha} \tilde{f} \geq ?? \quad 
+\Delta_{\vb*a}f \Delta_{\vb*\alpha} \tilde{f} \geq 1 \quad 
 %\forall \vb*a, \vb*\alpha, 
 \forall f \in \Lsq{\infty},%[\mathbb{R}^2],
 \end{equation}
@@ -649,11 +649,11 @@ This fraction can be proven to be maximized by the largest eigenvalue to the fam
   measures in sortest wavelengths, $\lambda$. Both the tumor and the
   head are circular discs of radius $\RT$ and $\RH$ respectively;
   $\RH=10RT$ was used for these graphs.}
-\label{fig:T-infty}
+\label{fig:T-H}
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Discussion and further developments}
+\section{Discussion and out looks}
 \label{ch:discussion}
 \subsection{SAR}
 \todo[inline]{May need some grooming to be presentable and shouldn't really be put here}
